<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<ScrollView android:id="@+id/ScrollViewSettings"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/settings_password_prompt_label"
				android:text="@string/settings_password_prompt"></TextView>
			<Button android:id="@+id/settings_password_btn"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:text="@string/settings_password_btn_set"></Button>
			<CheckBox android:id="@+id/settings_copy_passcodes_chk"
				android:text="@string/settings_copy_passcodes_chk"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"></CheckBox>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
